# cogni_runtime

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: design.md
examples/: async_main.py  main.py  worker.py
runtime/: runtime.py  sample_cli.py  sinks.py  types.py  zmq_bus.py
sample/: main.py  worker.py
src/cogni_runtime/runtime/: __init__.py  client.py  design.md  llm_adapter.py  runtime.py  sample_cli.py  zmq_bus.py
src/cogni_runtime/sample/: async_main.py  main.py  worker.py
src/cogni_runtime/worker_runtime/: __init__.py  adapters.py  registry.py  zmq_worker.py
tests/: test_integration.py  test_runtime.py  test_worker_runtime.py
worker_runtime/: adapters.py  zmq_worker.py
